# flipoly

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  README.md  REFACTOR_MAP.md  TESTING.md  alembic.ini  analytics.py  analytics_server.py  calib.txt  check_db.py  check_pnl_markers_test.py  check_postgres.py  check_tables.py  check_trade_settings.py  compare.py  data.csv  deactivate.sql  debug_indent.py  debug_runner.py  diagnose.py  docker-compose.yml  extract_postgres.py  find_db.py  fix_indent.py  fix_indent2.py  fix_test.py  fix_test_api.py  fix_test_per_asset.py  fix_tests.py  implementation_plan.md  manual_steps.py  old_engine.py  (+24 more)
alembic/: env.py
polyflip/: check_funnel_reasons.py  check_live_coefficients.py  check_models_script.py  check_trading_mode.py  clean_test_presets.py  config.py  constants.py  database.sqlite  debug_backtest.py  edge_analysis.py  edge_pnl_analysis.py  run_stats.py  settings_registry.py  test_predict.py  test_put_min_edge.py  test_split_query.py
scratch/: check_db.py
scripts/: analyze_pnl.py  analyze_skips.py  analyze_stoploss.py  backfill_candles.py  check_activity.py  check_bot_db.py  clean_bad_thresholds.py  fast_check.py  import_sqlite.py  print_settings.py  refactor_engine.py  retrain_after_feature_refactor.py  retrain_all.py  run_backtest.py  run_ml_pipeline.py  smoke_test_flip_threshold.py  test_01_model.py  test_03_binance.py  test_04_repository.py  test_06_collector.py  test_07_features.py  test_08_e2e.py  test_09_crypto_trainer.py  test_10_backtester.py  test_11_backtest_thresholds.py  test_12_feature_columns.py  test_13_calibration.py  test_14_crypto_dashboard.py  test_predict.py  test_trainer.py  test_xrp_train.py  univariate_auc_screening.py  verify_refactor.py
tests/: conftest.py  test_active_models_summary.py  test_api_settings.py  test_audit_fixes.py  test_backtest.py  test_backtest_api.py  test_backtest_api_field_names.py  test_backtest_api_sql.py  test_backtest_integration.py  test_backtest_metrics.py  test_backtest_no_edge_detection.py  test_backtest_polymarket_pnl.py  test_backtest_schemas.py  test_backtest_settings_mapping.py  test_backtester_fallback.py  test_backtester_vol_regime.py  test_bug_fixes.py  test_candle_pruner.py  test_combined_mode.py  test_crypto_backtest_api.py  test_crypto_backtester_params.py  test_crypto_dashboard.py  test_crypto_integration.py  test_dashboard_api.py  test_dead_zone.py  test_dead_zone_unified.py  test_decide_favorite_edge.py  test_decision_logic.py  test_decision_logic_max_edge.py  test_decision_refactor.py  test_derived_features.py  test_engine.py  test_engine_candle_limit.py  test_engine_crypto_sizing.py  test_engine_favorite_mode.py  test_engine_reentry.py  test_entry_strategy.py  test_feature_builder.py  test_feature_builder_min_candles.py  (+46 more)
(+127 files in other folders)
