[tool.poetry]
name = "polyflip"
version = "0.1.0"
description = "Polymarket 15m markets analytic and prediction service"
authors = ["Roman Orlov <dr.orlov@yandex.ru>"]
readme = "README.md"
packages = [{include = "polyflip"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.3.4"
structlog = "^24.2.0"
scikit-learn = "^1.5.0"
apscheduler = "^3.10.4"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
py-clob-client = "^0.34.6"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
