[tool.poetry]
name = "polyflip"
version = "0.1.0"
description = "Polymarket 15m markets analytic and prediction service"
authors = ["Roman Orlov <dr.orlov@yandex.ru>"]
readme = "README.md"
packages = [{include = "polyflip"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.3.4"
structlog = "^24.2.0"
scikit-learn = "^1.5.0"
apscheduler = "^3.10.4"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
py-clob-client = "^0.34.6"
pandas = "^2.2.0"
numpy = ">=1.26,<3"
lightgbm = ">=4.3,<5"
sentry-sdk = {extras = ["fastapi"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Exclude files that make network calls on import
collect_ignore = [
    "scripts/test_14_crypto_dashboard.py",
    "test_runner.py",
    "test_remote.py",
    "test_schema.py",
]
